--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
             <div class="left">
                 <ul>
                     <li>
-                        <img src="Bank_web\search icon.png" ,alt="search">
+                        <img src=".\search icon.png" ,alt="search">
                     </li>
                     <li>
-                        <img src="Bank_web\notification.png" alt="notification">
+                        <img src=".\notification.png" alt="notification">
                     </li>
                     <li>
-                        <img src="Bank_web\account.png" alt="account">
+                        <img src=".\account.png" alt="account">
                     </li>
                 </ul>
             </div>
@@ -120,12 +120,12 @@
     <main>
         <section class="firstSection">
             <div class="leftSection">
-                <img src="Bank_web\back.png" , height="30px" ,width="30px">
+                <img src="back.png" , height="30px" ,width="30px">
                 <ul>
-                    <li><img src="Bank_web\dashboard.png" , height="24px" ,width="24px">My Dashboard</li>
-                    <li><img src="Bank_web\link.png" , height="24px" ,width="24px">TOTM links</li>
-                    <li><img src="Bank_web\summary.png" , height="24px" ,width="24px">Daily Summary</li>
-                    <li><img src="Bank_web\details.png" , height="24px" ,width="24px">Bank Details</li>
+                    <li><img src=".\dashboard.png" , height="24px" ,width="24px">My Dashboard</li>
+                    <li><img src=".\link.png" , height="24px" ,width="24px">TOTM links</li>
+                    <li><img src=".\summary.png" , height="24px" ,width="24px">Daily Summary</li>
+                    <li><img src=".\details.png" , height="24px" ,width="24px">Bank Details</li>
                 </ul>
             </div>
             <div class="rightSection">
